after successfully configured load balancing in the k8s

--- a/client/src/main/resources/application-k8s.properties
+++ b/client/src/main/resources/application-k8s.properties
@@ -2,16 +2,15 @@ server.port=8080
 #eureka-client-config
 eureka.client.service-url.defaultZone=${DEFAULT_ZONE:http://localhost:8085/eureka}
 eureka.instance.prefer-ip-address=${PREFER_IP_ADDRESS:true}
-spring.application.name=api-gateway
-#actuator-config
+eureka.client.registry-fetch-interval-seconds=3
 management.info.env.enabled=true
 management.endpoints.web.exposure.include=*
 info.app.author=mafei
 info.app.name=${spring.application.name}
 info.app.version=1.0.0
-#api-cloud-gateway config for eureka-client
-spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
-logging.level.org.springframework.cloud.gateway=debug
-
-
+info.app.host_name=${HOSTNAME}
+#GRPC
+grpc.client.grpc-server.address=${GRPC_SERVER_ADDRESS:discovery:///grpc-server}
+grpc.client.grpc-server.enable-keep-alive=false
+grpc.client.grpc-server.keep-alive-without-calls=false
+grpc.client.grpc-server.negotiation-type=plaintext
