--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -1,17 +1,2 @@
-server.port=8081
+spring.profiles.active=${PROFILE:dev}
 spring.application.name=grpc-client
-#eureka-client-config
-eureka.client.service-url.defaultZone=http://localhost:8085/eureka
-eureka.instance.prefer-ip-address=true
-eureka.client.registry-fetch-interval-seconds=3
-management.info.env.enabled=true
-management.endpoints.web.exposure.include=*
-info.app.author=mafei
-info.app.name=${spring.application.name}
-info.app.version=1.0.0
-info.app.host_name=${HOSTNAME}
-#GRPC
-grpc.client.grpc-server.address=discovery:///grpc-server
-grpc.client.grpc-server.enable-keep-alive=true
-grpc.client.grpc-server.keep-alive-without-calls=true
-grpc.client.grpc-server.negotiation-type=plaintext
