--- a/eureka-service/src/main/resources/application.properties
+++ b/eureka-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8085
 spring.application.name=eureka-server
-eureka.instance.prefer-ip-address=true
+eureka.instance.prefer-ip-address=${PREFER_IP_ADDRESS:true}
 #eureka-client-config
-eureka.client.service-url.defaultZone=http://localhost:8085/eureka
+eureka.client.service-url.defaultZone=${DEFAULT_ZONE:http://localhost:8085/eureka}
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
