--- a/service/src/main/resources/application-k8s.properties
+++ b/service/src/main/resources/application-k8s.properties
@@ -1,17 +1,16 @@
+spring.application.name=grpc-server
 server.port=8080
+grpc.server.port=9090
+spring.data.mongodb.uri=mongodb+srv://mafei:R49TG1SVusKu8bGv@cluster0.ajplq1t.mongodb.net
+spring.data.mongodb.database=user-point-db
+
 #eureka-client-config
 eureka.client.service-url.defaultZone=${DEFAULT_ZONE:http://localhost:8085/eureka}
 eureka.instance.prefer-ip-address=${PREFER_IP_ADDRESS:true}
-spring.application.name=api-gateway
-#actuator-config
+eureka.client.registry-fetch-interval-seconds=3
 management.info.env.enabled=true
 management.endpoints.web.exposure.include=*
 info.app.author=mafei
 info.app.name=${spring.application.name}
 info.app.version=1.0.0
-#api-cloud-gateway config for eureka-client
-spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
-logging.level.org.springframework.cloud.gateway=debug
-
-
+info.app.host_name=${HOSTNAME}
